<resources>
    <string name="app_name">SeePic</string>


    <!-- 新闻 -->
    <string name="news_commentsize">%1$s评论</string>
    <string name="detail_header_tv">下拉一下，看点儿不一样的</string>
    <string name="news_toast">已为您推荐了%1$s条新资讯</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>



    <string name="error_connection">网络连接异常，请稍后重试！</string>
    <string name="error_search">搜索失败，请稍后重试</string>
    <string name="secret_num">~~ 动态 %1$d ~~</string>
    <string name="error_playing_track">播放出错</string>
    <string name="folders">文件夹</string>
    <string name="play_time">--:--</string>
    <string name="play_no_resource">无音乐</string>
    <string name="play_mode">%1$s("%2$d")</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_repeat">单曲播放</string>
    <string name="play_mode_loop">顺序播放</string>
    <string name="search_lyric">在线搜词</string>
    <string name="artist_tips">歌手 - 专辑</string>
    <string name="song_operate">歌曲操作</string>
    <string name="love">收藏</string>
    <string name="equalizer">均衡器</string>

    <!--本地音乐-->
    <string name="item_local">本地歌曲</string>
    <string name="item_history">播放历史</string>
    <string name="item_favorite">我的收藏</string>
    <string name="item_download">下载缓存</string>
    <string name="item_cached">缓存下载</string>
    <string name="item_cached_music">缓存歌曲</string>
    <string name="local_music">本地歌曲</string>

    <string name="song_num">%1$d 首</string>
    <string name="default_num">0 首</string>
    <string name="random_play">随机播放</string>
    <string name="random_play_num">随机播放(%1$d首)</string>

    <!--歌单-->
    <string name="playlist_name">歌单名</string>
    <string name="playlist_online">我的歌单</string>
    <string name="playlist_creator">创建者</string>
    <string name="playlist_rename">重命名歌单</string>

    <string-array name="news_channel">
        <item>头条</item>
        <item>娱乐</item>
        <item>军事</item>
        <item>体育</item>
        <item>财经</item>
        <item>科技</item>
        <item>历史</item>
        <item>台湾</item>
        <item>汽车</item>
        <item>社会</item>
        <item>时尚</item>
        <item>国学</item>
        <item>文化</item>
        <item>星座</item>
        <item>读书</item>
        <item>游戏</item>
        <item>电影</item>
        <item>国际</item>
    </string-array>

    <string-array name="news_channel_id">
        <item>SYLB10,SYDT10</item>
        <item>YL53,FOCUSYL53</item>
        <item>JS83,FOCUSJS83</item>
        <item>TY43,FOCUSTY43,TYLIVE,TYTOPIC</item>
        <item>CJ33,FOCUSCJ33,HNCJ33</item>
        <item>KJ123,FOCUSKJ123</item>
        <item>LS153,FOCUSLS153</item>
        <item>TW73</item>
        <item>QC45,FOCUSQC45</item>
        <item>SH133,FOCUSSH133</item>
        <item>SS78,FOCUSSS78</item>
        <item>GXPD,FOCUSGXPD</item>
        <item>WH25,FOCUSWH25</item>
        <item>XZ09,FOCUSXZ09</item>
        <item>DS57,FOCUSDS57</item>
        <item>YX11,FOCUSYX11</item>
        <item>DYPD</item>
        <item>GJPD</item>
    </string-array>
</resources>
