<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.seeme.daniel.seepic.view.LocalItemView
                    android:id="@+id/localView"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    app:iv_icon="@drawable/item_music"
                    app:iv_icon_color="@color/colorPrimary"
                    app:tv_desc="@string/default_num"
                    app:tv_name="@string/item_local" />


                <com.seeme.daniel.seepic.view.LocalItemView
                    android:id="@+id/historyView"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:gravity="center_vertical"
                    app:iv_icon="@drawable/ic_history_black"
                    app:iv_icon_color="@color/amber"
                    app:tv_desc="@string/default_num"
                    app:tv_name="@string/item_history" />


                <com.seeme.daniel.seepic.view.LocalItemView
                    android:id="@+id/favoriteView"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:gravity="center_vertical"
                    app:iv_icon="@drawable/item_favorite"
                    app:iv_icon_color="@color/pink_pressed"
                    app:tv_desc="@string/default_num"
                    app:tv_name="@string/item_favorite" />


                <com.seeme.daniel.seepic.view.LocalItemView
                    android:id="@+id/downloadView"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:gravity="center_vertical"
                    app:iv_icon="@drawable/item_download"
                    app:tv_desc="@string/default_num"
                    app:tv_name="@string/item_download" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_4"
            android:orientation="vertical"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:text="@string/playlist_online"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <ImageView
                        android:id="@+id/playlistAddIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_playlist_add" />

                    <ImageView
                        android:id="@+id/playlistManagerIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:src="@drawable/ic_more" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/divider_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/playlistRcv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:minHeight="2dp"
                        android:paddingTop="2dp" />

                    <ProgressBar
                        android:id="@+id/loading_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:indeterminate="true"
                        android:visibility="gone"
                        tools:visibility="visible" />


                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>